--- a/FCN-trainer-only-val.ipynb
+++ b/FCN-trainer-only-val.ipynb
@@ -29,14 +29,14 @@
     "\n",
     "#ckpt_dir = \"/mnt/data3/FCN_rel/fine/ckpt_dir\"\n",
     "\n",
-    "PRETRAINED_MODEL_PATH= \"/mnt/data1/fcn/ckpt_dir\"\n",
+    "PRETRAINED_MODEL_PATH= \"/mnt/data3/FCN_unrel/500/ckpt_dir/\"\n",
     "\n",
     "WEIGHT_PATH = None #'/mnt/data3/related_dataset/npy/fine/vgg-rel-epoch-52.npy'\n",
     "\n",
     "#TRAINSET_PATH = '/mnt/data1/city/csv_files/cityscapes_train_wmask2.csv'\n",
     "VALSET_PATH = \"/home/sik4hi/city/csv_files/cityscapes_val_wmask.csv\"\n",
     "\n",
-    "data_csv_path = 'fcn32-random-val.csv'\n",
+    "data_csv_path = 'fcn32-game-val.csv'\n",
     "\n",
     "\n",
     "NUM_OF_CLASSESS = 19\n",
@@ -287,21 +287,25 @@
    },
    "outputs": [],
    "source": [
-    "#print(confusion)\n",
+    "data_csv_path = 'metrics_fcn32_unrel2-500.csv'\n",
     "row_sum=np.sum(confusion,axis=0)\n",
     "col_sum=np.sum(confusion,axis=1)\n",
     "#print(row_sum)\n",
     "#print(col_sum)\n",
     "\n",
     "class_miou=[0 for x in range(19)]\n",
+    "class_percision=[0 for x in range(19)]\n",
+    "class_recall=[0 for x in range(19)]\n",
     "for i in xrange(len(confusion[0])):\n",
     "    #print(confusion[i][i])\n",
     "    class_miou[i]=(float(confusion[i][i])/float((row_sum[i]+col_sum[i]-confusion[i][i])))\n",
+    "    class_recall[i]=(float(confusion[i][i])/float(row_sum[i]))\n",
+    "    class_percision[i]=(float(confusion[i][i])/float(col_sum[i]))\n",
     "\n",
-    "ofile  = open('mean_iou_random.csv', \"w\")\n",
+    "ofile  = open(data_csv_path, \"w\")\n",
     "writer = csv.writer(ofile)\n",
     "for i in range(len(class_miou)):\n",
-    "    writer.writerow([i,class_miou[i]])\n",
+    "    writer.writerow([i,class_miou[i],class_recall[i],class_percision[i]])\n",
     "ofile.close()    \n",
     "print(class_miou)\n",
     "\n",
