--- a/FCN16/FCN16_related2.ipynb
+++ b/FCN16/FCN16_related2.ipynb
@@ -2,59 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "npy file loaded\n",
-      "Layer name: conv1_1\n",
-      "Layer shape: (3, 3, 3, 64)\n",
-      "Layer name: conv1_2\n",
-      "Layer shape: (3, 3, 64, 64)\n",
-      "Layer name: conv2_1\n",
-      "Layer shape: (3, 3, 64, 128)\n",
-      "Layer name: conv2_2\n",
-      "Layer shape: (3, 3, 128, 128)\n",
-      "Layer name: conv3_1\n",
-      "Layer shape: (3, 3, 128, 256)\n",
-      "Layer name: conv3_2\n",
-      "Layer shape: (3, 3, 256, 256)\n",
-      "Layer name: conv3_3\n",
-      "Layer shape: (3, 3, 256, 256)\n",
-      "Layer name: conv4_1\n",
-      "Layer shape: (3, 3, 256, 512)\n",
-      "Layer name: conv4_2\n",
-      "Layer shape: (3, 3, 512, 512)\n",
-      "Layer name: conv4_3\n",
-      "Layer shape: (3, 3, 512, 512)\n",
-      "Layer name: conv5_1\n",
-      "Layer shape: (3, 3, 512, 512)\n",
-      "Layer name: conv5_2\n",
-      "Layer shape: (3, 3, 512, 512)\n",
-      "Layer name: conv5_3\n",
-      "Layer shape: (3, 3, 512, 512)\n",
-      "Layer name: fc6\n",
-      "Layer shape: [7, 7, 512, 4096]\n",
-      "fc6 dropout_added\n",
-      "Layer name: fc7\n",
-      "Layer shape: [1, 1, 4096, 4096]\n",
-      "fc7 dropout_added\n",
-      "Layer name: fc8\n",
-      "Layer shape: [1, 1, 4096, 19]\n",
-      "Finished building Network.\n",
-      "using Pretrained model\n",
-      "model_checkpoint_path: \"/mnt/data3/FCN_my_train/FCN16/ckpt_dir/fcn16_mytrain.ckpt-5\"\n",
-      "all_model_checkpoint_paths: \"/mnt/data3/FCN_my_train/FCN16/ckpt_dir/fcn16_mytrain.ckpt-5\"\n",
-      "\n",
-      "finished\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
@@ -75,16 +27,16 @@
     "import csv\n",
     "\n",
     "\n",
-    "ckpt_dir = \"/mnt/data3/FCN_my_train/FCN16/ckpt_dir\"\n",
+    "ckpt_dir = \"/mnt/data3/FCN_rel/FCN16/fine2/ckpt_dir/fcn16_rel2.ckpt\"\n",
     "\n",
-    "PRETRAINED_MODEL_PATH= \"/mnt/data3/FCN_my_train/FCN16/ckpt_dir\"\n",
+    "PRETRAINED_MODEL_PATH= \"/mnt/data3/FCN_rel/FCN16/fine2/ckpt_dir\"\n",
     "\n",
-    "WEIGHT_PATH = \"/mnt/data3/FCN_my_train/npy/fcn-mytrain-epoch-25.npy\"\n",
+    "WEIGHT_PATH = \"/mnt/data3/FCN_rel/fine2/npy/fcn-rel2-epoch-39.npy\"\n",
     "\n",
-    "TRAINSET_PATH = '/mnt/data1/city/csv_files/cityscapes_train_wmask.csv'\n",
-    "VALSET_PATH = '/mnt/data1/city/csv_files/cityscapes_val_wmask.csv'\n",
+    "TRAINSET_PATH = '/mnt/data3/city/csv_files/cityscapes_train_wmask.csv'\n",
+    "VALSET_PATH = '/mnt/data3/city/csv_files/cityscapes_val_wmask.csv'\n",
     "\n",
-    "data_csv_path = 'fcn16_mytrain.csv'\n",
+    "data_csv_path = 'fcn16_rel2.csv'\n",
     "\n",
     "\n",
     "NUM_OF_CLASSESS = 19\n",
@@ -168,11 +120,11 @@
     "\n",
     "train_image_batch, train_label_batch, train_mask_batch= tf.train.batch([train_image, train_label, train_mask], batch_size=BATCH_SIZE,\n",
     "                                                               capacity=100 + 3 * BATCH_SIZE,\n",
-    "                                                               num_threads=7)\n",
+    "                                                               num_threads=10)\n",
     "\n",
     "val_image_batch, val_label_batch, val_mask_batch= tf.train.batch([val_image, val_label, val_mask], batch_size=BATCH_SIZE,\n",
     "                                                               capacity=50 + 3 * BATCH_SIZE,\n",
-    "                                                               num_threads=7)\n",
+    "                                                               num_threads=10)\n",
     "\n",
     "with tf.device('/gpu:0'):\n",
     "    sess = tf.Session()\n",
@@ -242,7 +194,7 @@
     "    #labels_flat=tf.cast(labels_tf_flat, tf.int64)\n",
     "    pred_flat=tf.reshape(predictions,[-1])\n",
     "with tf.device('/cpu:0'):\n",
-    "    miou=tf.contrib.metrics.streaming_mean_iou(pred_flat,labels_tf_flat,19,weights=masks_tf)\n",
+    "    miou,update_cm=tf.contrib.metrics.streaming_mean_iou(pred_flat,labels_tf_flat,19,weights=masks_tf)\n",
     "    if not os.path.exists(ckpt_dir):\n",
     "        os.makedirs(ckpt_dir)\n",
     "    saver = tf.train.Saver(max_to_keep=150)\n",
@@ -258,7 +210,7 @@
     "        ckpt = tf.train.get_checkpoint_state(PRETRAINED_MODEL_PATH)\n",
     "        print(ckpt)\n",
     "        saver.restore(sess,ckpt.model_checkpoint_path)\n",
-    "        \n",
+    "    print(\"Loaded\")    \n",
     "    # print(csv_path)\n",
     "    # For populating queues with batches, very important!\n",
     "    coord = tf.train.Coordinator()\n",
@@ -269,13 +221,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "epoch = 0"
+    "epoch = 7"
    ]
   },
   {
@@ -290,10 +242,13 @@
     "total_train_loss_list,train_loss_list,plot_train_loss,plot_total_train_loss,plot_train_miou= [],[],[],[],[]\n",
     "val_loss_list,plot_val_loss,plot_val_miou= [],[],[]\n",
     "#for epoch in xrange(N_EPOCHS):\n",
-    "cmap = colors.ListedColormap(['blue','lightblue','orange','purple','r'\n",
-    "                              ,'darkkhaki','yellow','saddlebrown','orchid','grey'\n",
-    "                              ,'hotpink','blueviolet','gold','deeppink','greenyellow'\n",
-    "                              ,'maroon','yellowgreen','green','orangered','black'])\n",
+    "cmap = colors.ListedColormap([[0.4667,0.0431,0.1254],[0.902,0.5882,0.5490],[0,0.2353,0.3921]\n",
+    "                              ,[0,0,0.5569],[0.7451,0.6,0.6],[0,0,0.902]\n",
+    "                              ,[0.8627,0.0784,0.2352],[0.6,0.6,0.6],[1,0,0]\n",
+    "                              ,[0.502,0.251,0.502],[0.9569,0.1372,0.9098],[0.2745,0.5098,0.7059]\n",
+    "                              ,[0.5961,0.9843,0.5961],[0.9804,0.6667,0.1176],[0.8627,0.8627,0]\n",
+    "                              ,[0,0.3137,0.3922],[0,0,0.2745],[0.4196,0.5569,0.1372]\n",
+    "                              ,[0.4,0.4,0.6118],[0,0,0]])\n",
     "norm=colors.NoNorm(0,19)\n",
     "try:\n",
     "    while not coord.should_stop() and epoch< N_EPOCHS:\n",
@@ -301,8 +256,8 @@
     "        epoch_start_time = time.time()\n",
     "        for iteration in xrange(2975/BATCH_SIZE): \n",
     "            if (iteration%500==0):\n",
-    "                _,train_loss,total_train_loss,train_iou,train_pred_pic, train_label_pic = sess.run([train_op,cross_entropy_mean,total_loss,\n",
-    "                                                            miou,vgg_fcn.pred_up,labels_tf],feed_dict={train_mode: True})\n",
+    "                _,train_loss,total_train_loss,_,train_pred_pic, train_label_pic = sess.run([train_op,cross_entropy_mean,total_loss,\n",
+    "                                                            update_cm,vgg_fcn.pred_up,labels_tf],feed_dict={train_mode: True})\n",
     "                plt.figure(1)\n",
     "                plt.imshow(train_label_pic[0],cmap=cmap,norm=norm)\n",
     "                plt.figure(2)\n",
@@ -311,17 +266,17 @@
     "                #plt.imshow(output2[0],cmap=cmap,norm=norm)\n",
     "                plt.show()\n",
     "            else:\n",
-    "                    _,train_loss,total_train_loss,train_iou = sess.run([train_op,cross_entropy_mean,total_loss,\n",
-    "                                                            miou],feed_dict={train_mode: True})\n",
+    "                    _,train_loss,total_train_loss,_ = sess.run([train_op,cross_entropy_mean,total_loss,\n",
+    "                                                            update_cm],feed_dict={train_mode: True})\n",
     "            if(math.isnan(train_loss)):\n",
     "                break\n",
     "            train_loss_list.append(train_loss)\n",
     "            total_train_loss_list.append(total_train_loss)\n",
-    "            sys.stdout.write('\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r' + \"Iteration:\" + str(iteration)+ \"  Loss: \"+ str(train_loss)+ \" IOU: \"+ str(train_iou[0]))\n",
+    "            sys.stdout.write('\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r' + \"Iteration:\" + str(iteration)+ \"  Loss: \"+ str(train_loss))\n",
     "            sys.stdout.flush()\n",
     "                \n",
     "\n",
-    "\n",
+    "        train_iou=sess.run(miou)\n",
     "        train_loss_mean = np.mean(train_loss_list)\n",
     "        total_train_loss_mean=np.mean(total_train_loss_list)\n",
     "        plot_train_loss.append(train_loss_mean)\n",
@@ -329,7 +284,7 @@
     "\n",
     "        train_loss_list = []\n",
     "        total_train_loss_list = []\n",
-    "        plot_train_miou.append(train_iou[0])\n",
+    "        plot_train_miou.append(train_iou)\n",
     "        \n",
     "        var_miou = filter(lambda x: x.name.endswith('total_confusion_matrix:0'), tf.local_variables())\n",
     "        init_miou=tf.initialize_variables(var_miou)\n",
@@ -339,8 +294,8 @@
     "        \n",
     "        for iteration in xrange(500/BATCH_SIZE): \n",
     "            if (iteration%100==0):\n",
-    "                val_loss,val_iou,val_pred_pic, val_label_pic = sess.run([cross_entropy_mean,\n",
-    "                                                            miou,vgg_fcn.pred_up,labels_tf],feed_dict={train_mode: False})\n",
+    "                val_loss,_,val_pred_pic, val_label_pic = sess.run([cross_entropy_mean,\n",
+    "                                                            update_cm,vgg_fcn.pred_up,labels_tf],feed_dict={train_mode: False})\n",
     "                plt.figure(1)\n",
     "                plt.imshow(val_label_pic[0],cmap=cmap,norm=norm)\n",
     "                plt.figure(2)\n",
@@ -349,16 +304,17 @@
     "                #plt.imshow(output2[0],cmap=cmap,norm=norm)\n",
     "                plt.show()\n",
     "            else:\n",
-    "                    val_loss,val_iou = sess.run([cross_entropy_mean,miou],feed_dict={train_mode: False})\n",
+    "                    val_loss,_ = sess.run([cross_entropy_mean,update_cm],feed_dict={train_mode: False})\n",
     "            val_loss_list.append(val_loss)\n",
-    "            sys.stdout.write('\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r' + \"Iteration:\" + str(iteration)+ \"  Loss: \"+ str(val_loss)+ \" IOU: \"+ str(val_iou[0]))\n",
+    "            sys.stdout.write('\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r' + \"Iteration:\" + str(iteration)+ \"  Loss: \"+ str(val_loss))\n",
     "            sys.stdout.flush()\n",
-    "            \n",
+    "        \n",
+    "        val_iou=sess.run(miou)\n",
     "        val_loss_mean = np.mean(val_loss_list)\n",
     "        plot_val_loss.append(val_loss_mean)\n",
     "        \n",
     "        val_loss_list = []\n",
-    "        plot_val_miou.append(val_iou[0])\n",
+    "        plot_val_miou.append(val_iou)\n",
     "        \n",
     "        var_miou = filter(lambda x: x.name.endswith('total_confusion_matrix:0'), tf.local_variables())\n",
     "        init_miou=tf.initialize_variables(var_miou)\n",
@@ -368,12 +324,12 @@
     "        print \"Epoch\", epoch\n",
     "        \n",
     "        print \"===========**Training ACCURACY**================\"\n",
-    "        print 'Training mIOU: ', train_iou[0]\n",
+    "        print 'Training mIOU: ', train_iou\n",
     "        print \"Training Loss:\", train_loss_mean \n",
     "        print \"Training Loss:\", total_train_loss_mean \n",
     "        \n",
     "        print \"===========**VALIDATION ACCURACY**================\"\n",
-    "        print 'Validation mIOU: ', val_iou[0]\n",
+    "        print 'Validation mIOU: ', val_iou\n",
     "        print \"Validation Loss:\", val_loss_mean \n",
     "        \n",
     "        print \"=================**TIME**====================\"\n",
@@ -395,11 +351,11 @@
     "        plt.title(\"mIOU\")\n",
     "        plt.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n",
     "        plt.show()\n",
-    "        saver.save(sess, ckpt_dir + \"/fcn16_mytrain.ckpt\", global_step=epoch)\n",
+    "        saver.save(sess, ckpt_dir, global_step=epoch)\n",
     "        ofile  = open(data_csv_path, \"a\")\n",
     "        writer = csv.writer(ofile)\n",
     "        timep=((time.time() - epoch_start_time) / 60.)\n",
-    "        writer.writerow([train_loss_mean,train_iou[0],timep,val_loss_mean,val_iou[0],epoch])\n",
+    "        writer.writerow([train_loss_mean,train_iou,timep,val_loss_mean,val_iou,epoch])\n",
     "        ofile.close()\n",
     "except tf.errors.OutOfRangeError:\n",
     "    print (\"out of range\")\n",
@@ -460,65 +416,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "conv4_1 1 (512,)\n",
-      "conv5_2 0 (3, 3, 512, 512)\n",
-      "conv5_3 1 (512,)\n",
-      "fc8 0 (1, 1, 4096, 19)\n",
-      "conv2_2 0 (3, 3, 128, 128)\n",
-      "conv3_1 1 (256,)\n",
-      "conv1_1 0 (3, 3, 3, 64)\n",
-      "conv4_1 0 (3, 3, 256, 512)\n",
-      "fc8 1 (19,)\n",
-      "conv2_1 0 (3, 3, 64, 128)\n",
-      "conv4_3 1 (512,)\n",
-      "conv2_2 1 (128,)\n",
-      "conv4_2 0 (3, 3, 512, 512)\n",
-      "conv1_1 1 (64,)\n",
-      "conv5_1 0 (3, 3, 512, 512)\n",
-      "conv1_2 1 (64,)\n",
-      "fc7 1 (4096,)\n",
-      "conv3_2 1 (256,)\n",
-      "conv4_3 0 (3, 3, 512, 512)\n",
-      "fc6 0 (7, 7, 512, 4096)\n",
-      "conv3_3 0 (3, 3, 256, 256)\n",
-      "conv4_2 1 (512,)\n",
-      "conv5_1 1 (512,)\n",
-      "conv1_2 0 (3, 3, 64, 64)\n",
-      "score_pool4 0 (1, 1, 512, 19)\n",
-      "fc7 0 (1, 1, 4096, 4096)\n",
-      "conv3_2 0 (3, 3, 256, 256)\n",
-      "conv5_2 1 (512,)\n",
-      "fc6 1 (4096,)\n",
-      "conv3_3 1 (256,)\n",
-      "conv5_3 0 (3, 3, 512, 512)\n",
-      "conv2_1 1 (128,)\n",
-      "conv3_1 0 (3, 3, 128, 256)\n",
-      "score_pool4 1 (19,)\n",
-      "file saved /mnt/data3/FCN_my_train/FCN16/npy/fcn16-mytrain-epoch-5.npy\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'/mnt/data3/FCN_my_train/FCN16/npy/fcn16-mytrain-epoch-5.npy'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "vgg_fcn.save_npy(sess, '/mnt/data3/FCN_my_train/FCN16/npy/fcn16-mytrain-epoch-' + str(epoch) + '.npy')"
+    "vgg_fcn.save_npy(sess, '/mnt/data3/FCN_rel/FCN16/fine2/npy/fcn16-rel2-epoch-' + str(epoch) + '.npy')"
    ]
   },
   {
