--- a/exp2/FCN32-laye1.ipynb
+++ b/exp2/FCN32-laye1.ipynb
@@ -389,6 +389,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "vgg_fcn.save_npy(sess, \"/mnt/data3/exp2/npy/fcn32-layer1-epoch-\" + str(epoch) + \".npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
