--- a/exp2/FCN32-layer4.ipynb
+++ b/exp2/FCN32-layer4.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "ckpt_dir = \"/mnt/data3/exp2/layer4/fcn32_layer4.ckpt\"\n",
     "\n",
-    "PRETRAINED_MODEL_PATH= None #\"/mnt/data3/exp2/layer3\"\n",
+    "PRETRAINED_MODEL_PATH= \"/mnt/data3/exp2/layer4\"\n",
     "\n",
     "WEIGHT_PATH = \"/mnt/data1/imagenet-data/weights/vgg-epoch-78.npy\"\n",
     "\n",
@@ -46,7 +46,7 @@
     "NUM_CHANNELS = 3\n",
     "N_EPOCHS = 300\n",
     "\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
     "train_csv_file=open(TRAINSET_PATH,\"r\")\n",
     "train_filepaths=[]\n",
     "train_labels=[]\n",
@@ -233,7 +233,7 @@
    },
    "outputs": [],
    "source": [
-    "epoch = 0"
+    "epoch =24"
    ]
   },
   {
