--- a/FCN-trainer-unrel.ipynb
+++ b/FCN-trainer-unrel.ipynb
@@ -2,11 +2,137 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Loaded\n",
+      "conv1_1 Value Loaded\n",
+      "Layer name: conv1_1\n",
+      "Layer shape: (3, 3, 3, 64)\n",
+      "conv1_1 Frozen\n",
+      "conv1_1 (64,) Value Loaded\n",
+      "\n",
+      "\n",
+      "conv1_2 Value Loaded\n",
+      "Layer name: conv1_2\n",
+      "Layer shape: (3, 3, 64, 64)\n",
+      "L2 Loss Added\n",
+      "conv1_2 (64,) Value Loaded\n",
+      "\n",
+      "\n",
+      "conv2_1 Value Loaded\n",
+      "Layer name: conv2_1\n",
+      "Layer shape: (3, 3, 64, 128)\n",
+      "L2 Loss Added\n",
+      "conv2_1 (128,) Value Loaded\n",
+      "\n",
+      "\n",
+      "conv2_2 Value Loaded\n",
+      "Layer name: conv2_2\n",
+      "Layer shape: (3, 3, 128, 128)\n",
+      "L2 Loss Added\n",
+      "conv2_2 (128,) Value Loaded\n",
+      "\n",
+      "\n",
+      "conv3_1 Value Loaded\n",
+      "Layer name: conv3_1\n",
+      "Layer shape: (3, 3, 128, 256)\n",
+      "L2 Loss Added\n",
+      "conv3_1 (256,) Value Loaded\n",
+      "\n",
+      "\n",
+      "conv3_2 Value Loaded\n",
+      "Layer name: conv3_2\n",
+      "Layer shape: (3, 3, 256, 256)\n",
+      "L2 Loss Added\n",
+      "conv3_2 (256,) Value Loaded\n",
+      "\n",
+      "\n",
+      "conv3_3 Value Loaded\n",
+      "Layer name: conv3_3\n",
+      "Layer shape: (3, 3, 256, 256)\n",
+      "L2 Loss Added\n",
+      "conv3_3 (256,) Value Loaded\n",
+      "\n",
+      "\n",
+      "conv4_1 Value Loaded\n",
+      "Layer name: conv4_1\n",
+      "Layer shape: (3, 3, 256, 512)\n",
+      "L2 Loss Added\n",
+      "conv4_1 (512,) Value Loaded\n",
+      "\n",
+      "\n",
+      "conv4_2 Value Loaded\n",
+      "Layer name: conv4_2\n",
+      "Layer shape: (3, 3, 512, 512)\n",
+      "L2 Loss Added\n",
+      "conv4_2 (512,) Value Loaded\n",
+      "\n",
+      "\n",
+      "conv4_3 Value Loaded\n",
+      "Layer name: conv4_3\n",
+      "Layer shape: (3, 3, 512, 512)\n",
+      "L2 Loss Added\n",
+      "conv4_3 (512,) Value Loaded\n",
+      "\n",
+      "\n",
+      "conv5_1 Value Loaded\n",
+      "Layer name: conv5_1\n",
+      "Layer shape: (3, 3, 512, 512)\n",
+      "L2 Loss Added\n",
+      "conv5_1 (512,) Value Loaded\n",
+      "\n",
+      "\n",
+      "conv5_2 Value Loaded\n",
+      "Layer name: conv5_2\n",
+      "Layer shape: (3, 3, 512, 512)\n",
+      "L2 Loss Added\n",
+      "conv5_2 (512,) Value Loaded\n",
+      "\n",
+      "\n",
+      "conv5_3 Value Loaded\n",
+      "Layer name: conv5_3\n",
+      "Layer shape: (3, 3, 512, 512)\n",
+      "L2 Loss Added\n",
+      "conv5_3 (512,) Value Loaded\n",
+      "\n",
+      "\n",
+      "Layer name: fc6\n",
+      "Layer shape: [7, 7, 512, 4096]\n",
+      "fc6 Value Loaded\n",
+      "fc6 (4096,) Value Loaded\n",
+      "\n",
+      "\n",
+      "fc6 dropout_added\n",
+      "Layer name: fc7\n",
+      "Layer shape: [1, 1, 4096, 4096]\n",
+      "fc7 Value Loaded\n",
+      "fc7 (4096,) Value Loaded\n",
+      "\n",
+      "\n",
+      "fc7 dropout_added\n",
+      "fc8 Value Randomly initialized\n",
+      "L2 Loss Added\n",
+      "Layer name: score_fr\n",
+      "Layer shape: [1, 1, 4096, 19]\n",
+      "fc8_biases Value Initialized 0\n",
+      "\n",
+      "\n",
+      "Finished building Network.\n",
+      "using Pretrained model\n",
+      "model_checkpoint_path: \"/mnt/data3/FCN_unrel/unrel2/ckpt_dir/fcn_unrel.ckpt-44\"\n",
+      "all_model_checkpoint_paths: \"/mnt/data3/FCN_unrel/unrel2/ckpt_dir/fcn_unrel.ckpt-44\"\n",
+      "\n",
+      "finished\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
@@ -27,16 +153,16 @@
     "import csv\n",
     "\n",
     "\n",
-    "ckpt_dir = \"/mnt/data3/FCN_unrel/ckpt_dir\"\n",
+    "ckpt_dir = \"/mnt/data3/FCN_unrel/unrel2/ckpt_dir\"\n",
     "\n",
-    "PRETRAINED_MODEL_PATH= \"/mnt/data3/FCN_unrel/ckpt_dir\"\n",
+    "PRETRAINED_MODEL_PATH= \"/mnt/data3/FCN_unrel/unrel2/ckpt_dir\"\n",
     "\n",
-    "WEIGHT_PATH = '/mnt/data3/unrelated_dataset/npy/vgg-unrel-epoch-91.npy'\n",
+    "WEIGHT_PATH = \"/mnt/data3/unrelated_dataset2/npy/vgg-unrel2-epoch-154.npy\"\n",
     "\n",
     "TRAINSET_PATH = '/mnt/data1/city/csv_files/cityscapes_train_wmask.csv'\n",
     "VALSET_PATH = '/mnt/data1/city/csv_files/cityscapes_val_wmask.csv'\n",
     "\n",
-    "data_csv_path = 'data_unrel.csv'\n",
+    "data_csv_path = 'data_unrel2.csv'\n",
     "\n",
     "\n",
     "NUM_OF_CLASSESS = 19\n",
@@ -46,7 +172,7 @@
     "NUM_CHANNELS = 3\n",
     "N_EPOCHS = 300\n",
     "\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
     "train_csv_file=open(TRAINSET_PATH,\"r\")\n",
     "train_filepaths=[]\n",
     "train_labels=[]\n",
@@ -194,7 +320,7 @@
     "    #labels_flat=tf.cast(labels_tf_flat, tf.int64)\n",
     "    pred_flat=tf.reshape(predictions,[-1])\n",
     "with tf.device('/cpu:0'):\n",
-    "    miou=tf.contrib.metrics.streaming_mean_iou(pred_flat,labels_tf_flat,19,weights=masks_tf)\n",
+    "    miou, update_cm=tf.contrib.metrics.streaming_mean_iou(pred_flat,labels_tf_flat,19,weights=masks_tf)\n",
     "    if not os.path.exists(ckpt_dir):\n",
     "        os.makedirs(ckpt_dir)\n",
     "    saver = tf.train.Saver(max_to_keep=50)\n",
@@ -221,13 +347,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "epoch = 29"
+    "epoch = 44"
    ]
   },
   {
@@ -242,10 +368,13 @@
     "total_train_loss_list,train_loss_list,plot_train_loss,plot_total_train_loss,plot_train_miou= [],[],[],[],[]\n",
     "val_loss_list,plot_val_loss,plot_val_miou= [],[],[]\n",
     "#for epoch in xrange(N_EPOCHS):\n",
-    "cmap = colors.ListedColormap(['blue','lightblue','orange','purple','r'\n",
-    "                              ,'darkkhaki','yellow','saddlebrown','orchid','grey'\n",
-    "                              ,'hotpink','blueviolet','gold','deeppink','greenyellow'\n",
-    "                              ,'maroon','yellowgreen','green','orangered','black'])\n",
+    "cmap = colors.ListedColormap([[0.4667,0.0431,0.1254],[0.902,0.5882,0.5490],[0,0.2353,0.3921]\n",
+    "                              ,[0,0,0.5569],[0.7451,0.6,0.6],[0,0,0.902]\n",
+    "                              ,[0.8627,0.0784,0.2352],[0.6,0.6,0.6],[1,0,0]\n",
+    "                              ,[0.502,0.251,0.502],[0.9569,0.1372,0.9098],[0.2745,0.5098,0.7059]\n",
+    "                              ,[0.5961,0.9843,0.5961],[0.9804,0.6667,0.1176],[0.8627,0.8627,0]\n",
+    "                              ,[0,0.3137,0.3922],[0,0,0.2745],[0.4196,0.5569,0.1372]\n",
+    "                              ,[0.4,0.4,0.6118],[0,0,0]])\n",
     "norm=colors.NoNorm(0,19)\n",
     "try:\n",
     "    while not coord.should_stop() and epoch< N_EPOCHS:\n",
@@ -253,8 +382,8 @@
     "        epoch_start_time = time.time()\n",
     "        for iteration in xrange(2975/BATCH_SIZE): \n",
     "            if (iteration%500==0):\n",
-    "                _,train_loss,total_train_loss,train_iou,train_pred_pic, train_label_pic = sess.run([train_op,cross_entropy_mean,total_loss,\n",
-    "                                                            miou,vgg_fcn.pred_up,labels_tf],feed_dict={train_mode: True})\n",
+    "                _,train_loss,total_train_loss,_,train_pred_pic, train_label_pic = sess.run([train_op,cross_entropy_mean,total_loss,\n",
+    "                                                            update_cm,vgg_fcn.pred_up,labels_tf],feed_dict={train_mode: True})\n",
     "                plt.figure(1)\n",
     "                plt.imshow(train_label_pic[0],cmap=cmap,norm=norm)\n",
     "                plt.figure(2)\n",
@@ -263,17 +392,17 @@
     "                #plt.imshow(output2[0],cmap=cmap,norm=norm)\n",
     "                plt.show()\n",
     "            else:\n",
-    "                    _,train_loss,total_train_loss,train_iou = sess.run([train_op,cross_entropy_mean,total_loss,\n",
-    "                                                            miou],feed_dict={train_mode: True})\n",
+    "                    _,train_loss,total_train_loss,_ = sess.run([train_op,cross_entropy_mean,total_loss,\n",
+    "                                                            update_cm],feed_dict={train_mode: True})\n",
     "            if(math.isnan(train_loss)):\n",
     "                break\n",
     "            train_loss_list.append(train_loss)\n",
     "            total_train_loss_list.append(total_train_loss)\n",
-    "            sys.stdout.write('\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r' + \"Iteration:\" + str(iteration)+ \"  Loss: \"+ str(train_loss)+ \" IOU: \"+ str(train_iou[0]))\n",
+    "            sys.stdout.write('\\r\\r' + str(iteration))\n",
     "            sys.stdout.flush()\n",
     "                \n",
     "\n",
-    "\n",
+    "        train_iou=sess.run(miou)\n",
     "        train_loss_mean = np.mean(train_loss_list)\n",
     "        total_train_loss_mean=np.mean(total_train_loss_list)\n",
     "        plot_train_loss.append(train_loss_mean)\n",
@@ -281,7 +410,7 @@
     "\n",
     "        train_loss_list = []\n",
     "        total_train_loss_list = []\n",
-    "        plot_train_miou.append(train_iou[0])\n",
+    "        plot_train_miou.append(train_iou)\n",
     "        \n",
     "        var_miou = filter(lambda x: x.name.endswith('total_confusion_matrix:0'), tf.local_variables())\n",
     "        init_miou=tf.initialize_variables(var_miou)\n",
@@ -291,8 +420,8 @@
     "        \n",
     "        for iteration in xrange(500/BATCH_SIZE): \n",
     "            if (iteration%100==0):\n",
-    "                val_loss,val_iou,val_pred_pic, val_label_pic = sess.run([cross_entropy_mean,\n",
-    "                                                            miou,vgg_fcn.pred_up,labels_tf],feed_dict={train_mode: False})\n",
+    "                val_loss,_,val_pred_pic, val_label_pic = sess.run([cross_entropy_mean,\n",
+    "                                                            update_cm,vgg_fcn.pred_up,labels_tf],feed_dict={train_mode: False})\n",
     "                plt.figure(1)\n",
     "                plt.imshow(val_label_pic[0],cmap=cmap,norm=norm)\n",
     "                plt.figure(2)\n",
@@ -301,16 +430,17 @@
     "                #plt.imshow(output2[0],cmap=cmap,norm=norm)\n",
     "                plt.show()\n",
     "            else:\n",
-    "                    val_loss,val_iou = sess.run([cross_entropy_mean,miou],feed_dict={train_mode: False})\n",
+    "                    val_loss,_ = sess.run([cross_entropy_mean,update_cm],feed_dict={train_mode: False})\n",
     "            val_loss_list.append(val_loss)\n",
-    "            sys.stdout.write('\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r' + \"Iteration:\" + str(iteration)+ \"  Loss: \"+ str(val_loss)+ \" IOU: \"+ str(val_iou[0]))\n",
+    "            sys.stdout.write('\\r\\r' + str(iteration))\n",
     "            sys.stdout.flush()\n",
     "            \n",
+    "        val_iou=sess.run(miou)\n",
     "        val_loss_mean = np.mean(val_loss_list)\n",
     "        plot_val_loss.append(val_loss_mean)\n",
     "        \n",
     "        val_loss_list = []\n",
-    "        plot_val_miou.append(val_iou[0])\n",
+    "        plot_val_miou.append(val_iou)\n",
     "        \n",
     "        var_miou = filter(lambda x: x.name.endswith('total_confusion_matrix:0'), tf.local_variables())\n",
     "        init_miou=tf.initialize_variables(var_miou)\n",
@@ -320,12 +450,12 @@
     "        print \"Epoch\", epoch\n",
     "        \n",
     "        print \"===========**Training ACCURACY**================\"\n",
-    "        print 'Training mIOU: ', train_iou[0]\n",
+    "        print 'Training mIOU: ', train_iou\n",
     "        print \"Training Loss:\", train_loss_mean \n",
     "        print \"Training Loss:\", total_train_loss_mean \n",
     "        \n",
     "        print \"===========**VALIDATION ACCURACY**================\"\n",
-    "        print 'Validation mIOU: ', val_iou[0]\n",
+    "        print 'Validation mIOU: ', val_iou\n",
     "        print \"Validation Loss:\", val_loss_mean \n",
     "        \n",
     "        print \"=================**TIME**====================\"\n",
@@ -351,7 +481,7 @@
     "        ofile  = open(data_csv_path, \"a\")\n",
     "        writer = csv.writer(ofile)\n",
     "        timep=((time.time() - epoch_start_time) / 60.)\n",
-    "        writer.writerow([train_loss_mean,train_iou[0],timep,val_loss_mean,val_iou[0],epoch])\n",
+    "        writer.writerow([train_loss_mean,train_iou,timep,val_loss_mean,val_iou,epoch])\n",
     "        ofile.close()\n",
     "except tf.errors.OutOfRangeError:\n",
     "    print (\"out of range\")\n",
@@ -412,13 +542,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file saved /mnt/data3/FCN_unrel/unrel2/npy/fcn-unrel2-epoch-44.npy\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'/mnt/data3/FCN_unrel/unrel2/npy/fcn-unrel2-epoch-44.npy'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "vgg_fcn.save_npy(sess, '/mnt/data3/FCN_unrel/npy/fcn-unrel-epoch-' + str(epoch) + '.npy')"
+    "vgg_fcn.save_npy(sess, '/mnt/data3/FCN_unrel/unrel2/npy/fcn-unrel2-epoch-' + str(epoch) + '.npy')"
    ]
   },
   {
