--- a/FCN8/FCN8-only-val.ipynb
+++ b/FCN8/FCN8-only-val.ipynb
@@ -29,14 +29,14 @@
     "\n",
     "#ckpt_dir = \"/mnt/data3/FCN_rel/fine/ckpt_dir\"\n",
     "\n",
-    "PRETRAINED_MODEL_PATH= \"/mnt/data3/FCN_my_train/FCN8/ckpt_dir/\"\n",
+    "PRETRAINED_MODEL_PATH= \"/mnt/data3/FCN_random2/FCN8/ckpt_dir/\"\n",
     "\n",
     "WEIGHT_PATH = \"/mnt/data3/FCN_random/FCN16/npy/fcn16-random-epoch-11.npy\"\n",
     "\n",
     "#TRAINSET_PATH = '/mnt/data1/city/csv_files/cityscapes_train_wmask2.csv'\n",
     "VALSET_PATH = \"/home/sik4hi/city/csv_files/cityscapes_val_wmask.csv\"\n",
     "\n",
-    "#data_csv_path = 'fcn32-random-val.csv'\n",
+    "data_csv_path = 'metrics_fcn8_random2.csv'\n",
     "\n",
     "\n",
     "NUM_OF_CLASSESS = 19\n",
@@ -46,7 +46,7 @@
     "NUM_CHANNELS = 3\n",
     "N_EPOCHS = 1\n",
     "\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
     "\n",
     "val_csv_file=open(VALSET_PATH,\"r\")\n",
     "val_filepaths=[]\n",
@@ -212,18 +212,19 @@
     "        \n",
     "        \n",
     "        for iteration in xrange(500/BATCH_SIZE): \n",
-    "            if (iteration%100==0):\n",
-    "                val_loss,confusion,val_pred_pic, val_label_pic = sess.run([cross_entropy_mean,\n",
-    "                                                            update_cm,vgg_fcn.pred_up,labels_tf],feed_dict={train_mode: False})\n",
-    "                plt.figure(1)\n",
-    "                plt.imshow(val_label_pic[0],cmap=cmap,norm=norm)\n",
-    "                plt.figure(2)\n",
-    "                plt.imshow(val_pred_pic[0],cmap=cmap,norm=norm)\n",
+    "            #if (iteration%100==0):\n",
+    "            #    val_loss,confusion,val_pred_pic, val_label_pic = sess.run([cross_entropy_mean,\n",
+    "            #                                                update_cm,vgg_fcn.pred_up,labels_tf],feed_dict={train_mode: False})\n",
+    "            #    plt.figure(1)\n",
+    "            #    plt.imshow(val_label_pic[0],cmap=cmap,norm=norm)\n",
+    "            #    plt.figure(2)\n",
+    "            #    plt.imshow(val_pred_pic[0],cmap=cmap,norm=norm)\n",
     "                #plt.figure(3)\n",
     "                #plt.imshow(output2[0],cmap=cmap,norm=norm)\n",
-    "                plt.show()\n",
-    "            else:\n",
-    "                    val_loss,confusion = sess.run([cross_entropy_mean,update_cm],feed_dict={train_mode: False})\n",
+    "            #    plt.show()\n",
+    "            #else:\n",
+    "            \n",
+    "            val_loss,confusion = sess.run([cross_entropy_mean,update_cm],feed_dict={train_mode: False})\n",
     "            val_loss_list.append(val_loss)\n",
     "            sys.stdout.write('\\r\\r' + str(iteration))\n",
     "            sys.stdout.flush()\n",
@@ -287,6 +288,7 @@
    },
    "outputs": [],
    "source": [
+    "\n",
     "#print(confusion)\n",
     "row_sum=np.sum(confusion,axis=0)\n",
     "col_sum=np.sum(confusion,axis=1)\n",
@@ -294,14 +296,18 @@
     "#print(col_sum)\n",
     "\n",
     "class_miou=[0 for x in range(19)]\n",
+    "class_percision=[0 for x in range(19)]\n",
+    "class_recall=[0 for x in range(19)]\n",
     "for i in xrange(len(confusion[0])):\n",
     "    #print(confusion[i][i])\n",
     "    class_miou[i]=(float(confusion[i][i])/float((row_sum[i]+col_sum[i]-confusion[i][i])))\n",
+    "    class_recall[i]=(float(confusion[i][i])/float(row_sum[i]))\n",
+    "    class_percision[i]=(float(confusion[i][i])/float(col_sum[i]))\n",
     "\n",
-    "ofile  = open('mean_iou_fcn8.csv', \"w\")\n",
+    "ofile  = open(data_csv_path, \"w\")\n",
     "writer = csv.writer(ofile)\n",
     "for i in range(len(class_miou)):\n",
-    "    writer.writerow([i,class_miou[i]])\n",
+    "    writer.writerow([i,class_miou[i],class_recall[i],class_percision[i]])\n",
     "ofile.close()    \n",
     "print(class_miou)\n",
     "\n",
